--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -16,4 +16,7 @@ $font-size-2: 1.2rem !important;
     color: rgb(33, 37, 41);
     outline: none;
     margin: 0;
+    padding: 10px 30px;
+    font-size: 20px;
+    font-weight: 500;
 }
