--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,16 +1,16 @@
 $background-color-1:  rgba(44, 138, 138, 1) !important;
 $background-color-2: rgba(44, 138, 138, 0.5)  !important;
 $background-color-3:  rgba(44, 138, 138, 0.2)  !important;
+$background-color-4: rgb(224, 253, 245) !important;
+$background-color-5: rgba(42, 163, 163, 0.3);
 
 $color-1: rgb(33, 37, 41) !important;
 $color-2: rgb(255, 255, 255) !important;
 $color-3: rgb(44, 138, 138) !important;
+$color-4: rgb(60, 201, 211) !important;
+$color-5: rgba(140, 230, 230, 0.3) !important;
 
-
-$font-size-1: 1.5rem !important;
-$font-size-2: 1.2rem !important;
-
-@mixin id_album() {
+@mixin id_album(){
     border-radius: 0 !important;
     border: none;
     color: rgb(33, 37, 41);
@@ -19,4 +19,13 @@ $font-size-2: 1.2rem !important;
     padding: 10px 30px;
     font-size: 20px;
     font-weight: 500;
+}
+@mixin center(){
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+@mixin column(){
+    display: flex;
+    flex-direction: column;
 }
