feat: implement messages, implement stars

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
 @import './components/Regforms/Regforms.scss';
 @import './components/ShoppingCart/ShoppingCart.scss';
 @import './components/Slider/Slider.scss';
+@import './components/Message/Message.scss'; 
 
 body{
   margin: 0 auto;
