--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,8 +1,9 @@
 $background-color-1:  rgba(44, 138, 138, 1) !important;
-$background-color-2: rgba(44, 138, 138, 0.5)  !important;
-$background-color-3:  rgba(44, 138, 138, 0.2)  !important;
+$background-color-2: #48A9A6 !important;
+$background-color-3:  #9CEAEF  !important;
 $background-color-4: rgb(224, 253, 245) !important;
 $background-color-5: rgba(42, 163, 163, 0.3);
+$background-color-6: #ED6A5A !important;
 
 $color-1: rgb(33, 37, 41) !important;
 $color-2: rgb(255, 255, 255) !important;
