--- a/src/components/ShoppingCart/ShoppingCart.scss
+++ b/src/components/ShoppingCart/ShoppingCart.scss
@@ -50,6 +50,7 @@ th, td{
   justify-content: center;
   align-items: center;
   padding-right: 55%;
+  margin-top: 10px;
 }
 #quantity{
   padding: 0;
@@ -68,6 +69,7 @@ th, td{
 .arrow{
   max-height: 25px;
   max-width: 25px;
+  display: flex;
 }
 .trashbin{
   width: 13px;
@@ -105,8 +107,11 @@ th, td{
   .table-wrapper{
     min-height: 40vh;
   }
+  .total-price{
+    font-size: 1rem;
+  }
 }
-@media (max-width: 500px){
+@media (max-width: 550px){
   .empty-shoppingCart{
     height: 50vh;
   }
@@ -128,11 +133,14 @@ th, td{
   .number{
     font-size: 0.6rem
   }
-  .total-price{
-    font-size: 1rem;
-  }
   .checkout{
-    padding: 4px 7px 4px 7px;
-    font-size: 10px;
+    padding: 4px 5px 4px 5px;
+    font-size: 9px;
+  }
+  .quantity-wrapper{
+    margin-top: 0px;
+  }
+  .total-price{
+    font-size: 0.8rem;
   }
 }
