--- a/src/components/Album/Album.scss
+++ b/src/components/Album/Album.scss
@@ -25,7 +25,7 @@
   padding: 20px 30px 20px 30px;
 }
 .card_btn-BUY, .card_btn-sizes{
-  width: 80px;
+  max-width: 20vw;
   height: 40px;
 }
 .card_btn-BUY:hover,
@@ -59,7 +59,7 @@
   line-height: 1.8;
 }
 #price{
-  font-size: 2.5rem !important;
+  font-size: 2.5rem;
   color: #6c757d !important;
 }
 .card-text{
@@ -80,7 +80,7 @@
 }
 @media (max-width: 992px){
   .btn-group .btn{
-    font-size: 12px !important;
+    font-size: 12px;
   }
   .card-body{
     padding: 15px;
@@ -90,13 +90,12 @@
     font-size: 1.5rem !important;
   }
   #price{
-    font-size: 1.8rem !important;
+    font-size: 1.8rem;
     color: #6c757d !important;
   }
   .card-text{
     font-size: 1.3rem !important;
     margin-top: 0px !important;
-    margin-bottom: 10px !important;
   }
   .card-body{
     padding-top: 0 !important;
@@ -105,7 +104,7 @@
     font-size: 1rem !important;
   }
   .card_btn-BUY, .card_btn-sizes{
-    width: 60px;
+    //width: 80px;
     height: 30px;
   }
 }
@@ -117,7 +116,7 @@
     font-size: 1.5rem !important;
   }
   .card_btn-BUY, .card_btn-sizes{
-    width: 80px;
+    //width: 80px;
     height: 40px;
   }
   .card-body{
@@ -126,17 +125,21 @@
 }
 @media (max-width: 480px){
   .card_btn-BUY, .card_btn-sizes{
-    width: 50px;
+    max-width: 40vw;
     height: 30px;
+    font-size: 10px !important;
   }
   .card-body{
     padding: 20px;
   }
   .card-text{
-    font-size: 1rem !important;
+    font-size: 0.8rem !important;
   }
   .price{
     font-size: 1rem;
     margin-top: 10px
+  }
+  .mb-3 {
+    margin-bottom: 0px !important;
   }
 }
