--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -10,17 +10,17 @@
 .carousel-control-next-icon:hover, .carousel-control-prev-icon:hover{
   transform: scale(2, 3);
 } 
-.carousel-item h1{
-  position: absolute;
-  margin: 0;
-  color: black;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-.carousel-item{
-  display: block;
-}
+// .carousel-item h1{
+//   position: absolute;
+//   margin: 0;
+//   color: black;
+//   left: 50%;
+//   top: 50%;
+//   transform: translate(-50%, -50%);
+// }
+// .carousel-item{
+//   display: block;
+// }
 @media (max-width: 600px){
   .carousel-control-next-icon, .carousel-control-prev-icon{
     transform: scale(1.2, 1.8);
