--- a/src/components/ShoppingCart/ShoppingCart.scss
+++ b/src/components/ShoppingCart/ShoppingCart.scss
@@ -1,6 +1,7 @@
 @import '../../_variables';
 
 .empty-shoppingCart{
+  background-color: $color-7;
   display: flex;
   justify-content: center;
   align-items: center;
