--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,10 @@
 @import './components/ShoppingCart/ShoppingCart.scss';
 @import './components/Slider/Slider.scss';
 @import './components/Message/Message.scss'; 
+@import './components/Spinner/Spinner.scss';
+@import './components/Star/Star.scss';
+@import './components/Delivery/Delivery.scss';
+@import './components/Warranty/Warranty.scss';
 
 body{
   margin: 0 auto;
