--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,9 @@
 @import './components/Star/Star.scss';
 @import './components/Delivery/Delivery.scss';
 @import './components/Warranty/Warranty.scss';
+@import './components/Payment/Payment.scss';
+@import './components/About/About.scss';
+@import './components/OrderDailog/OrderDailog.scss';
 
 body{
   margin: 0 auto;
