--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,23 +1,23 @@
 $background-color-1:  rgba(44, 138, 138, 1) !important;
-$background-color-2: #73bd49 !important;
-$background-color-3:  #9CEAEF  !important;
-$background-color-4: rgb(224, 253, 245) !important;
-$background-color-5: rgba(42, 163, 163, 0.3);
+$background-color-2: #73bd49;
+$background-color-3:  #9CEAEF !important;
+$background-color-4: rgb(224, 253, 245);
+$background-color-5: rgba(42, 163, 163, 0.3) !important;
 //$background-color-6: #ED6A5A !important;
 
-$color-1: rgb(33, 37, 41) !important;
+$color-1: rgb(33, 37, 41);
 $color-2: rgb(255, 255, 255) !important;
-$color-3: rgb(44, 138, 138) !important;
+$color-3: rgb(44, 138, 138);
 $color-4: rgb(60, 201, 211) !important;
-$color-5: rgba(140, 230, 230, 0.3) !important;
+$color-5: rgba(140, 230, 230, 0.3);
 $color-6: #f9c74f;
 $color-7: #f8961e;
-$color-8: #f94144;
+$color-8: #97c56c;
 $color-9: #e9adb7;
-$color-10: #7343aa;
+$color-10: #dbf778;
 
 @mixin id_album(){
-    border-radius: 0 !important;
+    border-radius: 0;
     border: none;
     color: rgb(33, 37, 41);
     outline: none;
@@ -34,4 +34,11 @@ $color-10: #7343aa;
 @mixin column(){
     display: flex;
     flex-direction: column;
+}
+@mixin card-btn(){
+    max-width: 20vw;
+    height: 40px;
+    color: $color-1;
+    padding-right: 17px;
+    padding-left: 17px;
 }
