--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -1,5 +1,17 @@
 @import '../../_variables';
 
+// .card-bg-color-adult{
+//   background-color: $background-color-1
+// }
+// .card-bg-color-slippers{
+//   background-color: $background-color-3
+// }
+// .card-bg-color-kids{
+//   background-color: $background-color-2
+// }
+// .card-bg-color-newCategory{
+//   background-color: $color-6
+// }
 .card-bg-color{
   background-color: $background-color-2
 }
@@ -27,22 +39,11 @@
 .card_btn-buy:hover,
 .card_btn-sizes:focus,
 .card_btn-buy:focus{
-  background-color: $color-3;
+  background-color: $background-color-2 !important;
   color: $color-2;
   font-weight: 400;
-  border-color: $color-3;
+  border-color: $background-color-2;
 }
-// .card_btn-BUY{
-//   max-width: 20vw;
-//   height: 40px;
-// }
-// .card_btn-buy:hover,
-// .card_btn-BUY:focus{
-//   background-color: $color-3;
-//   color: $color-2;
-//   font-weight: 400;
-//   border-color: $color-3;
-// }
 @media (max-width: 767px){
   .cd-txt{
     font-size: 1.3rem;
@@ -51,7 +52,6 @@
 @media (max-width: 480px){
   .card_btn-sizes{
     max-width: 40vw;
-    // font-size: 10px !important;
   }
   .my-padding{
     padding: 0px 5px 0px 5px;
