--- a/src/components/ControlButtons/ControlButtons.scss
+++ b/src/components/ControlButtons/ControlButtons.scss
@@ -1,65 +1,32 @@
 @import '../../_variables';
 
-// .control_buttons{
-//   display: flex;
-//   justify-content: flex-start;
-// }
 .col-4{
   max-width: 25%;
   height: 160px;
 }
 #adult{
-  // max-width: 33.33vw;
   background-color: $background-color-1;
   @include id_album();
   @include center();
 }
 #kids{
-  // max-width: 40vw;
   background-color: $background-color-2;
   @include id_album();
   @include center();
 }
 #slippers{
-  // max-width: 33.33vw;
   background-color: $background-color-3;
   @include id_album();
   @include center();
 }
-#color1{
-  // max-width: 33.33vw;
+#newCategory{
   background-color: $color-6;
   @include id_album();
   @include center();
 }
-#color2{
-  // max-width: 33.33vw;
-  background-color: $color-7;
-  @include id_album();
-  @include center();
-}
-#color3{
-  // max-width: 33.33vw;
-  background-color: $color-8;
-  @include id_album();
-  @include center();
-}
-#color4{
-  // max-width: 33.33vw;
-  background-color: $color-9;
-  @include id_album();
-  @include center();
-}
-#color5{
-  // max-width: 33.33vw;
-  background-color: $color-10;
-  @include id_album();
-  @include center();
-}
-#kids:hover, #kids:focus, #kids:active{
+#kids:hover, #kids:focus, #kids:active,
+#newCategory:hover, #newCategory:focus, #newCategory:active{
   color: $color-2;
-  outline: none !important;
-  border: none !important;
 }
 #adult:hover{
   color: $color-2;
@@ -71,9 +38,6 @@
   justify-content: space-between;
   align-items: center;
 }
-// .btn{
-//   border-radius: 0;
-// }
 button:hover, button:focus, button:visited, button:active{
   box-shadow: none !important;
   outline: none !important;
@@ -83,12 +47,8 @@ small:hover, small:focus, small:visited, small:active, small:target{
   cursor: pointer;
 }
 @media (max-width: 850px){
-  // .col-md-4 {
-  //   padding: 20px 50px;
-  // }
   #adult, #kids, #slippers,
-  #color1, #color2, #color3,
-  #color4, #color5{
+  #newCategory{
     font-size: 1rem;
   }
 }
@@ -96,12 +56,8 @@ small:hover, small:focus, small:visited, small:active, small:target{
   height: 120px !important;
 }
 @media (max-width: 600px){
-  // .col-md-4 {
-  //   padding: 20px 50px;
-  // }
   #adult, #kids, #slippers,
-  #color1, #color2, #color3,
-  #color4, #color5{
+  #newCategory{
     font-size: 0.8rem;
   }
   .p-5{
@@ -109,12 +65,8 @@ small:hover, small:focus, small:visited, small:active, small:target{
   }
 }
 @media (max-width: 600px){
-  // .col-md-4 {
-  //   padding: 20px 50px;
-  // }
   #adult, #kids, #slippers,
-  #color1, #color2, #color3,
-  #color4, #color5{
+  #newCategory{
     font-size: 0.7rem;
   }
   .col-4{
@@ -124,19 +76,3 @@ small:hover, small:focus, small:visited, small:active, small:target{
     padding: 15px !important;
   }
 }
-// @media (max-width: 600px){
-//   #adult, #kids, #slippers{
-//     padding: 5px 20px;
-//     font-size: 0.8rem;
-//   }
-// }
-// @media (max-width: 475px){
-//   #adult, #kids, #slippers{
-//     padding: 5px 10px;
-//   }
-// }
-// @media (max-width: 380px){
-//   #adult, #kids, #slippers{
-//     font-size: 10px;
-//   }
-// }
