--- a/src/components/ShoppingCart/ShoppingCart.scss
+++ b/src/components/ShoppingCart/ShoppingCart.scss
@@ -45,10 +45,6 @@
 #shopCart-message{
   padding-left: 45%;
 }
-// .shopCart-message{
-//   display: flex;
-//   justify-content: flex-end;
-// }
 th, td{
   font-weight: 400;
   border-color: $color-4;
@@ -97,10 +93,8 @@ th, td{
   line-height: 16px;
 }
 .checkout:hover{
-  //background-color: $background-color-5;
-  // color: $color-2;
-  // background-color: $background-color-5;
-  border-color: $color-4;
+  border-color: $background-color-5 !important;
+  background-color: $background-color-5;
 }
 .total-price{
   font-size: 1.2rem;
