feat: add profile page

--- a/src/components/Message/Message.scss
+++ b/src/components/Message/Message.scss
@@ -13,13 +13,18 @@
   display: flex;
   flex-wrap: wrap;
   background-color: none;
-  color: rgb(194, 22, 22);
   padding: 0;
   margin-bottom: 0;
   height: 24px;
 }
 .message-text{
   margin: 0px;
+}
+.my-danger{
+  color: rgb(194, 22, 22);
+}
+.my-success{
+  color: green;
 }
 @media (max-width: 850px){
   .alert {
