--- a/src/components/Regforms/Regforms.scss
+++ b/src/components/Regforms/Regforms.scss
@@ -1,23 +1,14 @@
 @import '../../_variables';
 
-.confirmBtn{
-  background-color: $color-6;
-  border-color: $color-6;
-  color: $color-2;
-}
-.confirmBtn:hover{
-  background-color: $color-2;
-  border-color: $color-6;
-  color: $color-6;
-}
 .okBtn{
   background-color: $background-color-2;
   border-color: $background-color-2;
   color: $color-2;
 }
-.okBtn:hover{
+.okBtn:hover,
+.okBtn:focus{
   background-color: $color-2;
-  border-color: $background-color-2;
+  border-color: $background-color-2 !important;
   color: $background-color-2 !important;
 }
 .form-control:focus{
