--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,7 @@
 @import './components/Payment/Payment.scss';
 @import './components/About/About.scss';
 @import './components/OrderDailog/OrderDailog.scss';
+@import './components/Profile/Profile.scss';
 
 body{
   margin: 0 auto;
