--- a/src/components/Warranty/Warranty.scss
+++ b/src/components/Warranty/Warranty.scss
@@ -1,7 +1,7 @@
 @import '../../_variables';
 
 .warranty{
-  background-color: $color-9;
+  background-color: $background-color-3;
   display: flex;
   justify-content: center;
   align-items: center;
