--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -11,7 +11,9 @@
 .responsive{
   min-width: 85%;
 }
-.profile-name{
-  display: flex;
-  
+// .profile-name{
+//   display: flex;
+// }
+.wishes-image{
+  width: 30px;
 }
