--- a/src/components/Star/Star.scss
+++ b/src/components/Star/Star.scss
@@ -4,11 +4,13 @@
   color: $color-6 !important;
   text-align: right !important;
   font-size: 2rem !important;
-  margin-right: 15px;
-  margin-top: 3%;
 }
 #star{
   margin: 10px 20px 0 0;
+  position: relative;
+  left: 80%;
+  top: 3%;
+  width: 10%;
 }
 @media (max-width: 992px){
   .text-muted{
